--- a/src/main/resources/views/configuration/configuration.fxml
+++ b/src/main/resources/views/configuration/configuration.fxml
@@ -2,14 +2,18 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTreeTableView?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="698.0" prefWidth="464.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.lrima.laop.controller.ConfigurationController">
+<AnchorPane prefHeight="600.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.lrima.laop.controller.ConfigurationController">
    <children>
       <Label layoutX="196.0" layoutY="26.0" text="Configuration" />
-      <JFXButton buttonType="RAISED" layoutX="137.0" layoutY="174.0" prefHeight="61.0" prefWidth="190.0" ripplerFill="RED" text="Configurer" />
-      <JFXTreeTableView layoutX="21.0" layoutY="382.0" prefHeight="191.0" prefWidth="422.0" />
+      <JFXButton layoutX="137.0" layoutY="174.0" onAction="#onConfigurerClick" prefHeight="61.0" prefWidth="190.0" text="Configurer">
+         <styleClass>
+            <String fx:value="raised" />
+            <String fx:value="high" />
+         </styleClass></JFXButton>
+      <JFXTreeTableView fx:id="table" layoutX="26.0" layoutY="422.0" prefHeight="140.0" prefWidth="400.0" />
    </children>
 </AnchorPane>
