Finished the designing the pane for the Scopes

--- a/src/main/resources/css/general.css
+++ b/src/main/resources/css/general.css
@@ -1,6 +1,6 @@
 .root{
-    -fx-background-color: #424242;
-    -fx-mid-text-color: #FFF  ;}
+    -fx-background-color: #ffffff;
+    -fx-mid-text-color: #303030;}
 
 .high{
     -fx-background-color : #3944ff;
