--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -19,3 +19,11 @@
     -fx-text-fill : #FFFFFF;
 
 }
+
+.scroll-pane > .viewport {
+    -fx-background-color: rgba(255, 255, 255, 0.5);
+}
+
+.jfx-slider > .track {
+    -fx-background-color: blue;
+}
