--- a/src/main/resources/css/general.css
+++ b/src/main/resources/css/general.css
@@ -20,12 +20,16 @@
 
 }
 
-.console-panel{
-    -fx-background-color: rgba(255, 255, 255, 0.5);
-}
-
 .jfx-slider > .track {
     -fx-background-color: blue;
+}
+
+.scroll-pane{
+    -fx-background-color: transparent;
+}
+
+.scroll-pane > .viewport {
+    -fx-background-color: rgba(255, 255, 255, 0.5);
 }
 
 .btn{
