--- a/src/main/resources/css/general.css
+++ b/src/main/resources/css/general.css
@@ -1,3 +1,4 @@
+/*COLOR THEME: https://color.adobe.com/?????-Banner-color-theme-12137382*/
 .root{
     -fx-background-color: #000000;
     -fx-mid-text-color: #303030;}
