Added error checking before running simulation

--- a/src/main/resources/css/general.css
+++ b/src/main/resources/css/general.css
@@ -1,6 +1,6 @@
 /*COLOR THEME: https://color.adobe.com/?????-Banner-color-theme-12137382*/
 .root{
-    -fx-background-color: #000000;
+    -fx-background-color: #FFFFFF;
     -fx-mid-text-color: #303030;}
 
 .btn{
