debut configuration panel

--- a/src/main/resources/css/general.css
+++ b/src/main/resources/css/general.css
@@ -4,7 +4,7 @@
     -fx-mid-text-color: #303030;}
 
 .btn{
-    -fx-background-color : #3944ff;
+    -fx-background-color : #204E5F;
     -fx-text-fill : #FFFFFF;
     -jfx-button-type: RAISED;
 }
