--- a/src/main/resources/views/configuration/configuration.fxml
+++ b/src/main/resources/views/configuration/configuration.fxml
@@ -11,23 +11,43 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import java.lang.String?>
 
-
 <AnchorPane prefHeight="600.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.lrima.laop.ui.controllers.ConfigurationController">
    <children>
       <VBox layoutY="63.0" pickOnBounds="false" prefHeight="492.0" prefWidth="178.0">
          <children>
-            <JFXButton alignment="CENTER" layoutX="178.0" onAction="#addAlgorithmClicked" prefHeight="45.0" prefWidth="186.0" styleClass="btn" text="Add algorithm" />
-            <JFXListView fx:id="scopeList" prefHeight="600.0" prefWidth="178.0" VBox.vgrow="ALWAYS" />
+            <AnchorPane prefHeight="42.0" prefWidth="178.0">
+               <children>
+                  <Label layoutX="14.0" layoutY="6.0" prefHeight="35.0" prefWidth="104.0" text="Algorithms">
+                     <font>
+                        <Font size="17.0" />
+                     </font>
+                  </Label>
+                  <JFXButton layoutX="136.0" layoutY="9.0" onAction="#addAlgorithmClicked" prefHeight="16.0" prefWidth="1.0" styleClass="btn" text="+">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </JFXButton>
+               </children>
+            </AnchorPane>
+            <ScrollPane hbarPolicy="NEVER" prefHeight="449.0" prefWidth="178.0">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="447.0" prefWidth="176.0">
+                     <children>
+                        <JFXListView fx:id="scopeList" prefHeight="449.0" prefWidth="178.0" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </ScrollPane>
          </children>
       </VBox>
-      <Label alignment="CENTER" layoutY="14.0" prefHeight="40.0" prefWidth="451.0" text="Configuration" underline="true">
+      <Label alignment="CENTER" layoutY="14.0" prefHeight="40.0" prefWidth="451.0" text="Settings" underline="true">
          <font>
             <Font name="System Bold" size="28.0" />
          </font>
       </Label>
-      <ScrollPane hbarPolicy="NEVER" layoutX="178.0" layoutY="64.0" prefHeight="492.0" prefWidth="272.0">
+      <ScrollPane hbarPolicy="NEVER" layoutX="178.0" layoutY="64.0" prefHeight="492.0" prefWidth="451.0">
          <content>
-            <HBox fx:id="settingsBox" minWidth="-Infinity" prefHeight="386.0" prefWidth="272.0" />
+            <BorderPane fx:id="settingsContainer" prefHeight="489.0" prefWidth="451.0" />
          </content>
       </ScrollPane>
    </children>
