--- a/src/main/resources/views/configuration/configuration.fxml
+++ b/src/main/resources/views/configuration/configuration.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import com.jfoenix.controls.*?>
 <?import java.lang.*?>
@@ -29,7 +30,7 @@
                   </JFXButton>
                </children>
             </AnchorPane>
-            <ScrollPane hbarPolicy="NEVER" prefHeight="449.0" prefWidth="178.0">
+            <ScrollPane hbarPolicy="NEVER" prefHeight="412.0" prefWidth="178.0">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="447.0" prefWidth="176.0">
                      <children>
@@ -38,6 +39,14 @@
                   </AnchorPane>
               </content>
             </ScrollPane>
+            <JFXButton fx:id="downloadBtn" prefHeight="45.0" prefWidth="179.0" styleClass="btn" text="Download new" VBox.vgrow="ALWAYS">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </JFXButton>
          </children>
       </VBox>
       <Label alignment="CENTER" layoutY="14.0" prefHeight="40.0" prefWidth="451.0" text="Settings" underline="true">
