Start download panel

--- a/src/main/resources/views/panels/downloadAlgo/algorithmSummary.fxml
+++ b/src/main/resources/views/panels/downloadAlgo/algorithmSummary.fxml
@@ -8,9 +8,9 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="80.0" prefWidth="120.0" styleClass="algorithmSummaryBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:controller="org.lrima.laop.ui.controllers.AlgorithmSummaryController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="80.0" prefWidth="120.0" styleClass="algorithmSummaryBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutY="-1.0" prefHeight="22.0" prefWidth="120.0" text="Label">
+      <Label fx:id="title" layoutY="-1.0" prefHeight="22.0" prefWidth="120.0" text="Label">
          <font>
             <Font size="13.0" />
          </font>
