--- a/src/main/resources/views/panels/downloadAlgo/downloadAlgorithm.fxml
+++ b/src/main/resources/views/panels/downloadAlgo/downloadAlgorithm.fxml
@@ -23,10 +23,33 @@
       </HBox>
    </top>
    <center>
-      <TilePane fx:id="algorithmTiles" hgap="10.0" prefHeight="200.0" prefWidth="200.0" vgap="10.0" BorderPane.alignment="CENTER">
-         <padding>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-         </padding>
-      </TilePane>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <ScrollPane hbarPolicy="NEVER" prefHeight="301.0" prefWidth="600.0">
+               <content>
+                  <TilePane fx:id="algorithmTiles" hgap="10.0" prefHeight="299.0" prefWidth="598.0" vgap="10.0">
+                     <padding>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                     </padding>
+                  </TilePane>
+               </content>
+            </ScrollPane>
+            <HBox alignment="CENTER" prefHeight="60.0" prefWidth="600.0">
+               <children>
+                  <JFXButton fx:id="prevPageBtn" styleClass="btn" text="Previous page">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                  </JFXButton>
+                  <Label fx:id="currentPageLbl" alignment="CENTER" prefHeight="86.0" prefWidth="49.0" text="1" />
+                  <JFXButton fx:id="nextPageBtn" styleClass="btn" text="Next page">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                  </JFXButton>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
    </center>
 </BorderPane>
