--- a/src/main/resources/views/panels/downloadAlgo/downloadAlgorithm.fxml
+++ b/src/main/resources/views/panels/downloadAlgo/downloadAlgorithm.fxml
@@ -7,49 +7,54 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.lrima.laop.ui.controllers.DownloadAlgorithmController">
-   <top>
-      <HBox prefHeight="65.0" prefWidth="600.0" styleClass="panel-header" BorderPane.alignment="CENTER">
-         <children>
-            <Label prefHeight="65.0" prefWidth="462.0" text="Algorithms shared on LISP">
-               <padding>
-                  <Insets left="20.0" />
-               </padding>
-               <font>
-                  <Font size="29.0" />
-               </font>
-            </Label>
-         </children>
-      </HBox>
-   </top>
-   <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <children>
-            <ScrollPane hbarPolicy="NEVER" prefHeight="301.0" prefWidth="600.0">
-               <content>
-                  <TilePane fx:id="algorithmTiles" hgap="10.0" prefHeight="268.0" prefWidth="598.0" vgap="10.0">
-                     <padding>
-                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                     </padding>
-                  </TilePane>
-               </content>
-            </ScrollPane>
-            <HBox alignment="CENTER" prefHeight="60.0" prefWidth="600.0">
+
+<StackPane fx:id="root" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.lrima.laop.ui.controllers.DownloadAlgorithmController">
+   <children>
+      <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+         <top>
+            <HBox prefHeight="65.0" prefWidth="600.0" styleClass="panel-header" BorderPane.alignment="CENTER">
                <children>
-                  <JFXButton fx:id="prevPageBtn" styleClass="btn" text="Previous page">
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin>
-                  </JFXButton>
-                  <Label fx:id="currentPageLbl" alignment="CENTER" prefHeight="86.0" prefWidth="49.0" text="1" />
-                  <JFXButton fx:id="nextPageBtn" styleClass="btn" text="Next page">
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin>
-                  </JFXButton>
+                  <Label prefHeight="65.0" prefWidth="462.0" text="Algorithms shared on LISP">
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                     <font>
+                        <Font size="29.0" />
+                     </font>
+                  </Label>
                </children>
             </HBox>
-         </children>
-      </VBox>
-   </center>
-</BorderPane>
+         </top>
+         <center>
+            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+               <children>
+                  <ScrollPane hbarPolicy="NEVER" prefHeight="276.0" prefWidth="587.0">
+                     <content>
+                        <TilePane fx:id="algorithmTiles" hgap="10.0" prefHeight="268.0" prefRows="3" prefWidth="598.0" vgap="10.0">
+                           <padding>
+                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                           </padding>
+                        </TilePane>
+                     </content>
+                  </ScrollPane>
+                  <HBox alignment="CENTER" prefHeight="60.0" prefWidth="600.0">
+                     <children>
+                        <JFXButton fx:id="prevPageBtn" styleClass="btn" text="Previous page">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </JFXButton>
+                        <Label fx:id="currentPageLbl" alignment="CENTER" prefHeight="86.0" prefWidth="49.0" text="1" />
+                        <JFXButton fx:id="nextPageBtn" styleClass="btn" text="Next page">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </JFXButton>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </center>
+      </BorderPane>
+   </children>
+</StackPane>
