--- a/src/main/resources/views/panels/downloadAlgo/viewAlgorithm.fxml
+++ b/src/main/resources/views/panels/downloadAlgo/viewAlgorithm.fxml
@@ -39,10 +39,51 @@
       </HBox>
    </top>
    <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+      <VBox style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+         <children>
+            <HBox prefHeight="223.0" prefWidth="600.0">
+               <children>
+                  <JFXTextArea fx:id="descriptionTextArea" editable="false" layoutX="14.0" layoutY="14.0" prefHeight="166.0" prefWidth="366.0">
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" />
+                     </HBox.margin>
+                  </JFXTextArea>
+                  <VBox prefHeight="200.0" prefWidth="235.0">
+                     <children>
+                        <Label prefHeight="27.0" prefWidth="239.0" text="About the author">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                        </Label>
+                        <GridPane prefHeight="82.0" prefWidth="235.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Label prefHeight="27.0" prefWidth="127.0" text="Name" />
+                              <Label fx:id="authorName" text="Name_field" GridPane.columnIndex="1" />
+                           </children>
+                        </GridPane>
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+         </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
          <padding>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            <Insets top="10.0" />
          </padding>
-      </AnchorPane>
+      </VBox>
    </center>
 </BorderPane>
