start download progress

--- a/src/main/resources/views/panels/downloadAlgo/algorithmSummary.fxml
+++ b/src/main/resources/views/panels/downloadAlgo/algorithmSummary.fxml
@@ -8,7 +8,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="99.0" prefWidth="200.0" styleClass="algorithmSummaryBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.lrima.laop.ui.controllers.AlgorithmSummaryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="99.0" prefWidth="200.0" styleClass="algorithmSummaryBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.lrima.laop.ui.controllers.downloadAlgorithm.AlgorithmSummaryController">
    <children>
       <Label fx:id="title" layoutY="-1.0" prefHeight="22.0" prefWidth="200.0" text="Algorithm name">
          <font>
