--- a/src/main/resources/views/panels/downloadAlgo/downloadProgress.fxml
+++ b/src/main/resources/views/panels/downloadAlgo/downloadProgress.fxml
@@ -22,7 +22,7 @@
             </JFXButton>
          </children>
       </HBox>
-      <ProgressBar prefHeight="32.0" prefWidth="509.0" progress="0.0">
+      <ProgressBar fx:id="downloadProgressBar" prefHeight="32.0" prefWidth="509.0" progress="0.0">
          <VBox.margin>
             <Insets bottom="20.0" left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
