--- a/src/main/resources/views/panels/downloadAlgo/downloadAlgorithm.fxml
+++ b/src/main/resources/views/panels/downloadAlgo/downloadAlgorithm.fxml
@@ -7,7 +7,6 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <StackPane fx:id="root" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.lrima.laop.ui.controllers.downloadAlgorithm.DownloadAlgorithmController">
    <children>
       <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
@@ -28,16 +27,21 @@
          <center>
             <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                <children>
+                  <HBox fx:id="errorBox" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #c60f0f;" visible="false">
+                     <children>
+                        <Label alignment="CENTER" prefHeight="62.0" prefWidth="600.0" text="Unable to load data from LASP" textFill="#f5f5f5" />
+                     </children>
+                  </HBox>
                   <ScrollPane hbarPolicy="NEVER" prefHeight="276.0" prefWidth="587.0">
                      <content>
-                        <TilePane fx:id="algorithmTiles" hgap="10.0" prefHeight="268.0" prefRows="3" prefWidth="598.0" vgap="10.0">
+                        <TilePane fx:id="algorithmTiles" hgap="10.0" prefHeight="221.0" prefRows="3" prefWidth="598.0" vgap="10.0">
                            <padding>
                               <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                            </padding>
                         </TilePane>
                      </content>
                   </ScrollPane>
-                  <HBox alignment="CENTER" prefHeight="60.0" prefWidth="600.0">
+                  <HBox fx:id="bottomBar" alignment="CENTER" prefHeight="60.0" prefWidth="600.0">
                      <children>
                         <JFXButton fx:id="prevPageBtn" styleClass="btn" text="Previous page">
                            <HBox.margin>
