Data saved to csv

--- a/src/main/resources/views/conclusion/results.fxml
+++ b/src/main/resources/views/conclusion/results.fxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="1022.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="1022.0" xmlns="http://javafx.com/javafx/8" fx:controller="org.lrima.laop.ui.controllers.ResultController" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <HBox prefHeight="80.0" prefWidth="1022.0" styleClass="gray-panel" BorderPane.alignment="CENTER">
          <children>
@@ -22,4 +22,7 @@
          </children>
       </HBox>
    </top>
+   <center>
+      <JFXButton fx:id="getDataBtn" styleClass="btn" text="Create CSV" BorderPane.alignment="CENTER" />
+   </center>
 </BorderPane>
