--- a/src/main/resources/views/configuration/configuration.fxml
+++ b/src/main/resources/views/configuration/configuration.fxml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import com.jfoenix.controls.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXTreeTableView?>
+<?import com.jfoenix.controls.JFXListView?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import java.lang.String?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.lrima.laop.ui.controllers.ConfigurationController">
+<AnchorPane prefHeight="600.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.lrima.laop.ui.controllers.ConfigurationController">
    <children>
       <VBox layoutY="63.0" pickOnBounds="false" prefHeight="492.0" prefWidth="178.0">
          <children>
             <AnchorPane prefHeight="42.0" prefWidth="178.0">
                <children>
-                  <Label layoutX="14.0" layoutY="6.0" prefHeight="35.0" prefWidth="104.0" text="Algorithms">
+                  <Label fx:id="algorithmLabel" layoutX="14.0" layoutY="6.0" prefHeight="35.0" prefWidth="104.0" text="\%algorithm">
                      <font>
                         <Font size="17.0" />
                      </font>
@@ -39,7 +37,7 @@
                   </AnchorPane>
               </content>
             </ScrollPane>
-            <JFXButton fx:id="downloadBtn" prefHeight="45.0" prefWidth="179.0" styleClass="btn" text="Download new" VBox.vgrow="ALWAYS">
+            <JFXButton fx:id="downloadBtn" prefHeight="45.0" prefWidth="179.0" styleClass="btn" text="\%download-new" VBox.vgrow="ALWAYS">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
@@ -49,7 +47,7 @@
             </JFXButton>
          </children>
       </VBox>
-      <Label alignment="CENTER" layoutY="14.0" prefHeight="40.0" prefWidth="451.0" text="Settings" underline="true">
+      <Label fx:id="settingLabel" alignment="CENTER" layoutY="14.0" prefHeight="40.0" prefWidth="451.0" text="\%setting" underline="true">
          <font>
             <Font name="System Bold" size="28.0" />
          </font>
