--- a/src/main/resources/views/configuration/home.fxml
+++ b/src/main/resources/views/configuration/home.fxml
@@ -12,7 +12,7 @@
             <Font size="65.0" />
          </font>
       </Label>
-      <Label fx:id="text" alignment="TOP_LEFT" layoutX="14.0" layoutY="116.0" prefHeight="232.0" prefWidth="420.0" text="%text-entry" textAlignment="JUSTIFY" wrapText="true" />
+      <Label fx:id="text" alignment="TOP_LEFT" layoutX="14.0" layoutY="116.0" prefHeight="232.0" prefWidth="420.0" text="\%text-entry" textAlignment="JUSTIFY" wrapText="true" />
       <ChoiceBox fx:id="choiceBox" layoutX="284.0" layoutY="554.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
