--- a/src/main/resources/views/configuration/configuration.fxml
+++ b/src/main/resources/views/configuration/configuration.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXListView?>
 <?import javafx.geometry.Insets?>
@@ -10,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.lrima.laop.ui.controllers.ConfigurationController">
+<AnchorPane prefHeight="600.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.lrima.laop.ui.controllers.ConfigurationController">
    <children>
       <VBox layoutY="63.0" pickOnBounds="false" prefHeight="492.0" prefWidth="178.0">
          <children>
@@ -30,9 +36,9 @@
             </AnchorPane>
             <ScrollPane hbarPolicy="NEVER" prefHeight="412.0" prefWidth="178.0">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="447.0" prefWidth="176.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="393.0" prefWidth="176.0">
                      <children>
-                        <JFXListView fx:id="scopeList" prefHeight="449.0" prefWidth="178.0" />
+                        <JFXListView fx:id="scopeList" prefHeight="483.0" prefWidth="178.0" />
                      </children>
                   </AnchorPane>
               </content>
