--- a/src/main/resources/views/configuration/home.fxml
+++ b/src/main/resources/views/configuration/home.fxml
@@ -19,5 +19,12 @@
       <JFXButton fx:id="viewScientificConceptsBtn" layoutX="13.0" layoutY="500.0" prefHeight="39.0" prefWidth="208.0" styleClass="btn" text="Concepts scientifiques" AnchorPane.leftAnchor="13.0" />
       <JFXButton fx:id="viewGitHubBtn" layoutX="132.0" layoutY="300.0" prefHeight="39.0" prefWidth="186.0" styleClass="btn-danger" text="\%view-github" AnchorPane.leftAnchor="132.0" AnchorPane.rightAnchor="132.0" />
       <JFXButton fx:id="viewUserGuideBtn" layoutX="227.0" layoutY="500.0" prefHeight="39.0" prefWidth="208.0" styleClass="btn" text="Guide utilisateur" AnchorPane.rightAnchor="15.0" />
+      <Label fx:id="authorLbl" layoutX="14.0" layoutY="366.0" text="\%authors">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="14.0" layoutY="393.0" text="- Clément Bisaillon" />
+      <Label layoutX="14.0" layoutY="420.0" text="- Léonard Oest O'Leary" />
    </children>
 </AnchorPane>
