--- a/src/main/resources/views/configuration/home.fxml
+++ b/src/main/resources/views/configuration/home.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import com.jfoenix.controls.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.lrima.laop.ui.controllers.HomeController">
+<AnchorPane prefHeight="600.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.lrima.laop.ui.controllers.HomeController">
    <children>
       <Label layoutX="147.0" layoutY="14.0" text="LAOP">
          <font>
@@ -24,7 +24,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="14.0" layoutY="393.0" text="- Clément Bisaillon" />
+      <Label layoutX="14.0" layoutY="403.0" text="- Clément Bisaillon" />
       <Label layoutX="14.0" layoutY="420.0" text="- Léonard Oest O'Leary" />
    </children>
 </AnchorPane>
